@@ -40,6 +40,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       to inadvertently close this file in multi-threaded environment.
   b - Finding subjobs (for heterogeneous jobs) wasn't compatible with hostnames that
       have dashes. TRQ-1229.
+  b - Removed the call to wait_request the main_loop on pbs_server. All of our communication
+      is handled directly and there is no longer a need to wait for an out of band
+      reply from a client. TRQ-1161.
 
 4.1.2
   e - Add the ability to run a single job partially on CRAY hardware and partially
